some bugs with aligning elements in toggle and radio fixed

--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -24,6 +24,7 @@
     }
 
     &:after{
+      align-self: center;
       opacity: var(--opacity, 0);
       content: '';
       width: 12px;
@@ -45,12 +46,13 @@
   }
 
   &__text{
+    //vertical-align: text-top;
     padding-left: 10px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 18px;
     color: $dark-50;
   }
 
