--- a/src/blocks/toggle/toggle.scss
+++ b/src/blocks/toggle/toggle.scss
@@ -2,7 +2,8 @@
 
 .toggle{
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  user-select: none;
   &__button{
     flex-shrink: 0;
     position: relative;
@@ -45,11 +46,12 @@
   }
 
   &__text{
+    padding-left: 10px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 18px;
     color: $dark-75;
   }
 }
